k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: todo-app
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
